--- a/vignettes/SparseArray_objects.Rmd
+++ b/vignettes/SparseArray_objects.Rmd
@@ -3,7 +3,7 @@ title: "SparseArray objects"
 author:
 - name: Hervé Pagès
   affiliation: Fred Hutchinson Cancer Research Center, Seattle, WA
-date: "Compiled `r BiocStyle::doc_date()`; Modified 4 August 2024"
+date: "Compiled `r BiocStyle::doc_date()`; Modified 11 September 2024"
 package: SparseArray
 vignette: |
   %\VignetteIndexEntry{SparseArray objects}
@@ -258,10 +258,10 @@ var(svt2, na.rm=TRUE)
 
 See `?SparseArray_summarization` for more information and additional examples.
 
-## Operations from the 'Ops', 'Math', 'Math2', and 'Complex' groups
+## Operations from the 'Arith', 'Compare', 'Logic', 'Math', 'Math2', and 'Complex' groups
 
-SVT\_SparseArray objects support operations from the 'Ops', 'Math', `Math2`,
-and 'Complex' groups, with some restrictions.
+SVT\_SparseArray objects support operations from the 'Arith', 'Compare',
+'Logic', 'Math', `Math2`, and 'Complex' groups, with some restrictions.
 See `?S4groupGeneric` in the `r Biocpkg("methods")` package for more
 information about these group generics.
 
@@ -269,8 +269,9 @@ information about these group generics.
 signif((svt1^1.5 + svt1) %% 100 - 0.6 * svt1, digits=2)
 ```
 
-See `?SparseArray_Ops`, `?SparseArray_Math`, and `?SparseArray_Complex`,
-for more information and additional examples.
+See `?SparseArray_Arith`, `?SparseArray_Compare`, `?SparseArray_Logic`,
+`?SparseArray_Math`, and `?SparseArray_Complex` for more information
+and additional examples.
 
 ## Generate a random SVT\_SparseArray object
 
