--- a/TODO
+++ b/TODO
@@ -2,8 +2,8 @@
 
   1. Implement subassignment by Mindex. Add unit tests for subassignment.
 
-  2. Implement methods rowAnyNAs(), rowMeans(), rowVars(), and rowSds().
-     Add unit tests.
+  2. Implement methods rowAnyNAs(), rowMins, rowMaxs(), rowMeans(), rowVars(),
+     and rowSds(). Add unit tests.
 
   3. Add vignette for NaArray objects.
 
@@ -17,12 +17,20 @@
 - Implement which() methods for SparseArray and NaArray objects of type
   logical.
 
+- Add optimized is_nonzero() method for SparseArray objects.
+  is_nonzero(<SVT_SparseArray>) simply needs to strip off the "nzvals"
+  component from the non-empty leaves and return the result as a logical
+  SVT_SparseArray. This means that the returned object will be fully lacunar
+  (i.e. all its leaves will be lacunar), like with is.na().
+
+- Add optimized is_nonna() method for NaArray objects.
+
 - Implement fast nzvals() getter/setter for SVT_SparseMatrix objects and
   fast nnavals() getter/setter for NaArray objects. Default methods work
   fine but are not as fast as they could be.
 
-- Add unit tests for nzcount(), nzwhich(), and nzvals() getter and setter,
-  and for nnacount(), nnawhich(), and nnavals() getter and setter.
+- Add unit tests for is_nonzero() and the nz*() functions, and for is_nonna()
+  and the nna*() functions.
 
 - Implement efficient coercions from dgTMatrix to COO_SparseMatrix and
   SVT_SparseMatrix. 'as(<dgTMatrix>, "SparseMatrix")' and
@@ -50,15 +58,6 @@
 - Support names() getter and setter on a 1D SparseArray or NaArray object
   as a shortcut for 'dimnames()[[1L]]' and 'dimnames()[[1L]] <- value'
   respectively. This is to mimic the R base array API.
-
-- Add is.nonzero() generic with methods for SparseArray objects and other
-  sparseMatrix derivatives from the Matrix package ([d|l|n]g[C|R]Matrix
-  objects).
-  is.nonzero(<SVT_SparseArray>) simply needs to strip off the "nzvals"
-  component from the non-empty leaves and return the result as a logical
-  SVT_SparseArray. This means that the returned object will be fully
-  lacunar (i.e. all its leaves will be lacunar), like with is.na().
-  is.nonzero(<[d|l|n]g[C|R]Matrix>) should return an ng[C|R]Matrix object.
 
 - Add nzvals() methods for COO_SparseArray and SVT_SparseArray objects.
   Uncomment nzvals() examples in vignette and SparseArray-class.Rd
